2004-01-15  Ulrich Drepper  <drepper@redhat.com>

	* Versions.def: Add GLIBC_2.3.4.

2004-01-15  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/alpha/sysdep.h: Revert last change.

2004-01-15  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/dl-machine.h (RTLD_START): Use _dl_argv_internal.

	* sysdeps/unix/alpha/sysdep.h [PIC] (SYSCALL_ERROR_HANDLER): Use
	!samegp relocation.

2004-01-15  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/Makefile [stdlib]: Process
	ucontext-offsets.sym.
	* sysdeps/unix/sysv/linux/alpha/getcontext.S: New file.
	* sysdeps/unix/sysv/linux/alpha/makecontext.S: New file.
	* sysdeps/unix/sysv/linux/alpha/setcontext.S: New file.
	* sysdeps/unix/sysv/linux/alpha/swapcontext.S: New file.
	* sysdeps/unix/sysv/linux/alpha/ucontext-offsets.sym: New file.

2004-01-15  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/rt_sigaction.S: Prefix stubs with
	__syscall_, move nop inside, adjust users by +4.

2004-01-14  Steven Munroe  <sjmunroe@us.ibm.com>

	* include/libc-symbols.h [HAVE_ASM_GLOBAL_DOT_NAME]
	(_symbol_version): Use C_SYMBOL_DOT_NAME to create '.'ed symbols.
	(_default_symbol_version): Use C_SYMBOL_DOT_NAME to create '.'ed
	symbols.
	* sysdeps/powerpc/Makefile: Add rtld-global-offsets.sym to
	gen-as-const-headers.
	* sysdeps/powerpc/elf/rtld-global-offsets.sym: New file.
	* sysdeps/powerpc/sysdep.h: Define v# symbols for vector registers.
	Define PPC_FEATURE_* masks for Aux Vector AT_HWCAP.
	* sysdeps/unix/sysv/linux/kernel-features.h
	(__ASSUME_SWAPCONTEXT_SYSCALL): Define for PPC and 2.6.0 kernels.
	* sysdeps/unix/sysv/linux/powerpc/sys/ucontext.h [!__WORDSIZE == 32]:
	Declare mcontext_t inline and include altivec state for 64-bit.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/Versions: Add GLIBC_2.3.4
	versions for setcontext, getcontext, and swapcontext.

	* sysdeps/unix/sysv/linux/powerpc/powerpc64/Versions: Add GLIBC_2.3.4