@@ -1,3 +1,9 @@
+2004-01-16  Richard Henderson  <rth@redhat.com>
+
+        * allocatestack.c: Don't declare __libc_stack_end.
+        * init.c (__pthread_initialize_minimal_internal): Likewise.
+        * pthread_getattr_np.c (pthread_getattr_np): Likewise.
+
 2004-01-15  Richard Henderson  <rth@redhat.com>
 
 	* sysdeps/alpha/tls.h (tcbhead_t): Add private.
