@@ -1,3 +1,11 @@
+2004-01-16  Richard Henderson  <rth@redhat.com>
+
+        * elf/dl-load.c: Don't declare __libc_stack_end.
+        * sysdeps/generic/libc-start.c: Likewise.
+        * sysdeps/unix/sysv/linux/dl-execstack.c: Likewise.
+        * sysdeps/generic/segfault.c: Likewise.  Include ldsodefs.h.
+        * sysdeps/generic/backtrace.c: Likewise.
+
 2004-01-15  Ulrich Drepper  <drepper@redhat.com>
 
 	* Versions.def: Add GLIBC_2.3.4.
